--- a/laravel/proyecto_integrador/composer.json
+++ b/laravel/proyecto_integrador/composer.json
@@ -12,7 +12,8 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.0",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "components/jquery": "1.9.*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -64,7 +65,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "robloach/component-installer": true
         }
     },
     "minimum-stability": "stable",
